--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,12 @@ body {
     color: var(--primary-text-color);
 }
 
+.container {
+    margin: 0 auto;
+    width: 1200px;
+    padding: 0 15px;
+}
+
 /* Logo */
 
 .logo {
@@ -142,6 +148,11 @@ body {
 .list-buttons button:focus {
     color: #FFFFFF;
     background: var(--accent-color);
+}
+
+.button {
+    padding: 6 22px;
+    border-radius: 4px;
 }
 
 .project-list h2 {
